--- a/config/database.yml
+++ b/config/database.yml
@@ -41,6 +41,8 @@ test:
   pool: 5
   username: postgres
   password:
+  host: localhost
+  port: 5432
 
 production:
   adapter: postgresql
@@ -49,3 +51,5 @@ production:
   pool: 5
   username: postgres
   password:
+  host: localhost
+  port: 5432
