--- a/config/shards.yml
+++ b/config/shards.yml
@@ -5,7 +5,6 @@ postgres: &postgres
   encoding: unicode
   host: localhost
   port: 5432
-  pool: 5
   
 octopus:
   octopus_enviroments:
@@ -14,16 +13,16 @@ octopus:
   development:
     shards:
       com:
-        database: stats_com_dev
+        database: stats_com_shard
         <<: *postgres
       de:
-        database: stats_de_dev
+        database: stats_de_shard
         <<: *postgres
       net:
-        database: stats_net_dev
+        database: stats_net_shard
         <<: *postgres
       fr:
-        database: stats_fr_dev
+        database: stats_fr_shard
         <<: *postgres
   staging:
     shards:
