--- a/config/shards.yml
+++ b/config/shards.yml
@@ -9,7 +9,7 @@ postgres: &postgres
 octopus:
   environments:
     - development
-    - test
+    - staging
   development:
     com:
       database: stats_com_dev
@@ -22,19 +22,6 @@ octopus:
       <<: *postgres
     fr:
       database: stats_fr_dev
-      <<: *postgres
-  test:
-    com:
-      database: stats_com_test
-      <<: *postgres
-    de:
-      database: stats_de_test
-      <<: *postgres
-    net:
-      database: stats_net_test
-      <<: *postgres
-    fr:
-      database: stats_fr_test
       <<: *postgres
   staging:
     com:
