--- a/config/shards.yml
+++ b/config/shards.yml
@@ -1,7 +1,7 @@
 postgres: &postgres
   adapter: postgresql
   username: postgres
-  password:
+  password: suite101
   encoding: unicode
   host: localhost
   port: 5432
