--- a/config/firewool.yml
+++ b/config/firewool.yml
@@ -4,8 +4,8 @@ development:
 test:
   ip_restriction: false
 staging:
-  ip_restriction: true
-  allow: [ 69.90.98.80/28 ] # allows for 69.90.98.81-94
+  ip_restriction: false
+  # allow: [ 69.90.98.80/28 ] # allows for 69.90.98.81-94
 production:
-  ip_restriction: true
-  allow: [ 69.90.98.80/28 ] # allows for 69.90.98.81-94
+  ip_restriction: false
+  # allow: [ 69.90.98.80/28 ] # allows for 69.90.98.81-94
